--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -35,8 +35,9 @@ body {
     body {
         max-width: 375px;
         overflow-x: hidden;
+        width: 100%;
     }
-
+    
     .header {
         border-bottom-left-radius: 18px;
         border-bottom-right-radius: 18px;
