--- a/src/scss/base/_adaptation.scss
+++ b/src/scss/base/_adaptation.scss
@@ -1,547 +1,5 @@
-.header {
-    border-radius: 0 0 48px 48px;
-    height: 102px;
-    max-width: 100%;
-    background: $headerBgColor;
-    @include flexCenter();
-    flex-direction: row;
-    justify-content: space-around;
-    gap: 5%;
-    position: sticky;
-    top: 0;
-    z-index: 2;
-    padding: 0 20px; // Исправлено: значения разделены пробелом
-}
+/*здесь было что-то*/
 
-.header__logo {
-    >img {
-        max-width: 240px;
-        height: 60px;
-    }
-}
 
-.header__nav {
-    display: flex;
-    align-items: center;
-}
 
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
 
-.header__dropdown {}
-
-.dropdown__button {
-    padding: 16px;
-    line-height: 150%;
-    border: none;
-    font-size: 18px;
-    background-color: white;
-}
-
-.dropdown__content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    max-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-
-    a {
-        color: black;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
-    }
-
-    a:hover {
-        background-color: #ddd;
-    }
-}
-
-.show {
-    display: block;
-}
-
-.nav-block {}
-
-.header__nav-block {}
-
-.nav-block__button {
-    padding: 16px;
-    line-height: 150%;
-    border: none;
-    font-size: 18px;
-    background-color: white;
-}
-
-.header__estimate {
-    button {
-        @include defaultButton();
-
-        &:hover {
-            @include hoverButton();
-
-        }
-    }
-}
-
-.header__estimate-button {}
-
-
-
-.face-image {
-    margin-top: -50px;
-    border-radius: 0 0 72px 72px;
-    padding: 0 20px;
-    max-width: 100%;
-    background-size: cover;
-    height: 689px;
-    background-image: url("/src/images/fce.webp");
-    background-repeat: no-repeat;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.4) 100%), rgba(0, 0, 0, 0.4), url("path_to_image");
-    @include flexCenter();
-}
-
-.face-image__title {}
-
-.face-image__subtitle {
-    @include bodyTextL();
-    color: #ffffff;
-    @include centeredText(center, 540px);
-}
-
-.face-image__buttons {
-    margin-top: 50px;
-    display: flex;
-    gap: 20px;
-}
-
-.face-image__button {
-  
-}
-
-.face-image__button--estimate {
-    button {
-        border: none;
-        @include buttonStyles(237px, 72px, $buttonDefaultColor, #fff);
-
-        &:hover {
-            @include hoverButton();
-            max-width: 237px;
-        }
-    }
-}
-
-.face-image__button--process {
-    button {
-     
-        @include buttonStyles(237px, 72px, #45290a00, #fff);
-        border: 1px solid  #fff;
-        &:hover {
-            @include hoverButton();
-            max-width: 237px;
-        }
-    }
-}
-
-.good-stuff {
-    @include sectionStyles(100%, row, 200px);
-    justify-content: space-evenly;
-    margin-top: 39px;
-}
-
-.good-stuff__item {
-    max-width: 272px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-.good-stuff__icon {}
-
-.good-stuff__text {
-    @include bodyTextM();
-    max-width: 250px;
-}
-
-.services {
-    margin-top: 45px;
-    padding-top: 95px;
-    border-radius: 72px;
-    background-color: #F6F3EC;
-    @include flexCenter();
-    padding-bottom: 105px;
-}
-
-.services__title {}
-
-.services__list {
-    padding: 0 72px;
-    gap: 16px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-}
-
-.service {
-    background-color: #ffffff;
-    border-radius: 32px;
-    padding: 24px 24px;
-    gap: 72px;
-    display: flex;
-    justify-content: center;
-}
-
-.service--refacing {}
-
-.service__image {}
-
-.service__description {
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-}
-
-.service__subheading {
-    @include subHeading();
-    color: #5E5E5E;
-}
-
-.service__name {}
-
-.service__small-heading {
-    @include bodyTextXS();
-    color: #5E5E5E;
-}
-
-.service__text {
-    @include bodyTextS();
-    color: #5E5E5E;
-    max-width: 479px;
-}
-
-.service__learn-more {
-    button {
-        @include learnMoreButton();
-        background-color: #5e5e5e00;
-    }
-
-}
-
-.service--replacement {
-    flex-direction: row-reverse;
-    gap: 107px;
-    padding-left: 71px;
-}
-
-.service--repair {
-    .service__name {
-        max-width: 474px;
-    }
-
-    .service__text {
-        max-width: 502px;
-    }
-
-}
-
-.gallery {
-    margin-top: 10%;
-    border-radius: 100px;
-    height: 100%; // Убедитесь, что высота контейнера адаптируется к родительскому элементу
-    background: url('/src/images/galleryBackground.webp') no-repeat center center;
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    padding: 2%;
-}
-
-.gallery__header {
-    padding-top: 100px;
-    display: flex;
-    align-items: start;
-    gap: 308px;
-    padding-bottom: 40px;
-}
-
-.gallery__header-title {
-    @include heading2();
-    margin: 0;
-}
-
-.gallery__header-more {
-    max-width: 744px;
-    display: flex;
-    flex-direction: column;
-    gap: 32px;
-}
-
-.gallery__more-text {
-    @include bodyTextM();
-    color: #fff;
-}
-
-.gallery__more-button {
-    button {
-        @include buttonStyles(209px, 72px, #00000000, #fff);
-    }
-}
-
-.glide {
-    margin: auto;
-}
-
-.glide__track {}
-
-.glide__slides {
-    gap: 20px;
-//padding: 0 72px;
-}
-
-
-.glide__slide {
-    display: flex;
-    gap: 24px;
-    justify-content: center;
-}
-
-.glide__arrows {
-    padding-top: 30px;
-    display: flex;
-    justify-content: flex-end;
-    gap: 14px;
-    padding-right: 72px;
-}
-
-.glide__arrow {
-font-size: 17px;
-line-height: 150%;
-    width: 72px;
-    height: 72px;
-    border-radius: 100%;
-    color: #fff;
-    border: 1px solid #fff;
-    background-color: #00000000;
-}
-
-.glide__arrow--left {}
-
-.glide__arrow--right {}
-
-.testimonials {
-    margin-top: 100px;
-    padding: 0 72px;
-   
-}
-
-.testimonials__header {
-    display: flex;
-    gap: 280px;
-    align-items: center;
-}
-
-.testimonials__title {}
-
-.testimonials__text {
-    max-width: 748px;
-    @include bodyTextM();
-    color: #5E5E5E;
-}
-
-.testimonials__comments {
-    display: flex;
-    gap: 69px;
-    @include bodyTextM();
-    color: #5E5E5E;
-    font-family: 'Red Hat Display';
-}
-
-.testimonial__comments-comment{
-    padding: 94px 45px 58px 40px;
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-  
-}
-
-.testimonial {}
-
-.testimonial__stars {}
-
-.testimonial__text {
-    max-width: 331px;
-}
-
-.testimonial__author {}
-
-.testimonial-form {
-    background-image: url("/src/images/inputBackground.webp");
-    background-repeat: no-repeat;
-    padding: 100px 72px;
-    position: relative;
-    z-index: 1;
-}
-
-.testimonial-form__wrapper {
-    display: flex;
-    gap: 48px;
-}
-
-.testimonial-form__image {
- 
-}
-
-.testimonial-form__form {
-    max-width: 494px;
-}
-
-.testimonial-form__title {
-    max-width: 100%;
-    margin: 0;
-}
-
-.testimonial-form__text {
-    padding-top: 16px;
-    padding-bottom: 24px;
-    @include bodyTextM();   
-    color: #5E5E5E;
-}
-
-.testimonial-form__inputs {
-    display: flex;
-    flex-direction: column;
-    gap: 6px;
-    input{
-       
-        @include inputButton();
-    }
-}
-
-.testimonial-form__names {
-    input{
-        max-width: 100%;
-    }
-    display: flex;
-    gap: 8px;
-}
-
-.testimonial-form__contact {
-    input{
-        max-width: 100%;
-    }
-    display: flex;
-    gap: 8px;
-}
-
-.testimonial-form__details {
-    gap: 6px;
-    display: flex;
-    flex-direction: column;
-    input{
-        max-width: 100%;
-    }
-    #message{
-        height: 122px;
-    }
-}
-
-.testimonial-form__dropdown {
- select{
-    @include bodyTextS();
-    @include inputButton();
-    color: #5E5E5E;
-    max-width: 100%;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    padding-left: 6px;
- }
-
-}
-
-.testimonial-form__button {
-    margin-top: 16px;
-    @include defaultButton();
-    max-width: 484px;
-}
-
-::placeholder{
-    padding-left: 16px;
-}
-
-.footer {
-    display: flex;
-    align-items: stretch;
-    justify-content: space-around;
-
-    margin-top: -5%;
-    z-index: 0;
-    position: relative;
-    max-width: 100%;
-    background-color: #342F28;
-    padding-bottom: 60px;
-    padding-top: 149px;
-    
-    @include buttonText();
-    color: #FFFBF4;
-    a{
-        color: #F37021;
-    }
-}
-
-.footer__info {
-    max-width: 348px;
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-    padding-left: 72px;
-    padding-right: 72px;
-}
-
-.footer__info-block {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    max-width: 298px;
-}
-
-.footer__follow {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    padding-left: 72px;
-}
-
-.footer__follow-block {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-}
-
-.footer__socials {}
-
-.footer__sponsor {}
-
-.footer__ratings {}
-
-.footer__links {}
-
-.footer__link {}
-
-.footer__policies {
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-    gap: 8px;
-}
-
-.footer__policy {}
-
-.footer__credits {
-    padding-top: 223px;
-}
