--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -7,11 +7,15 @@
 // Основной стиль для body
 
 // Стиль для header
-header {
-    
+
+h1 {
+    @include heading1();
+}
+
+.header {
     border-radius: 0 0 48px 48px;
     height: 102px;
-    width: 100%;
+    max-width: 100%;
     background: $headerBgColor;
     @include flexCenter();
     flex-direction: row;
@@ -23,86 +27,79 @@ header {
     padding: 0 20px; // Исправлено: значения разделены пробелом
 }
 
-h1 {
-    @include heading1();
-}
-
-// Логотип
-.logo {
+.header__logo {
     >img {
-        width: 240px;
+        max-width: 240px;
         height: 60px;
     }
 }
 
-#myNav{
-    
+.header__nav {
+    display: flex;
+    align-items: center;
 }
-// Кнопка навигации
-.navigateBlockBtn {
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.header__dropdown {}
+
+.dropdown__button {
     padding: 16px;
     line-height: 150%;
     border: none;
     font-size: 18px;
     background-color: white;
-
 }
 
-#telephone {
-    color: $brandOrange;
-}
+.dropdown__content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    max-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
 
-// Контейнер для выпадающего содержимого
-.navigateBlock {
-    font-size: 18px;
-    position: relative;
-    display: inline-block;
-
-
-    // Выпадающее содержимое (скрыто по умолчанию)
-    .navigateBlock-content {
-        margin-top: 2vh;
-        display: none;
-        position: absolute;
-        min-width: 333px;
-        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-        z-index: 1;
-        background: #f6f3ec;
-        border: 1px solid #d9d9d9;
-        border-radius: 0 0 24px 24px;
-
-        // Ссылки внутри выпадающего списка
-        a {
-            color: $linkColor;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-
-            &:hover {
-                background: $linkHoverBgColor; // Можно изменить на нужный цвет для hover
-            }
-        }
-    }
-
-    // Показать выпадающее меню при наведении курсора
-    &:hover .navigateBlock-content {
+    a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
         display: block;
     }
 
-    // Изменение цвета фона кнопки при отображении содержимого раскрывающегося списка
-    &:hover .navigateBlockBtn {
-        // Можно добавить стили для кнопки при раскрытом меню
+    a:hover {
+        background-color: #ddd;
     }
 }
 
-// Кнопка для получения бесплатной оценки
-.getAFreeEstimate {
+.show {
+    display: block;
+}
+
+.nav-block {}
+
+.header__nav-block {}
+
+.nav-block__button {
+    padding: 16px;
+    line-height: 150%;
+    border: none;
+    font-size: 18px;
+    background-color: white;
+}
+
+.header__estimate {
     button {
         @include defaultButton();
 
         &:hover {
             @include hoverButton();
-           
+
         }
     }
 }
+
+.header__estimate-button {}
+
